--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,15 @@
-mc_version = 1.14.4
-yarn_mappings = 1.14.4+build.5
-loader_version = 0.4.8+build.159
-fabric_version = 0.3.0+build.207
+org.gradle.jvmargs=-Xmx3G
+
+minecraft_version=1.18.2
+yarn_mappings=1.18.2+build.2
+loader_version=0.13.3
+
+#Fabric api
+fabric_version=0.48.0+1.18.2
+
 findbugs_version = 3.0.2
 javagl_version = 0.3.0
 
-mod_version = 1.3.0
+mod_version = 1.3.1
 mod_group = abused_master.abusedlib
-mod_name = AbusedLib
+mod_name = AbusedLib-unofficial
