--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,6 @@ fabric_version=0.48.0+1.18.2
 findbugs_version = 3.0.2
 javagl_version = 0.3.0
 
-mod_version = 1.3.1-1.18.2
+mod_version = 1.3.1
 mod_group = abused_master.abusedlib
-mod_name = AbusedLib-unofficial
+mod_name = AbusedLib
